casi bien se ven imagenes pero no en la segunda pantalla

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
+
+    android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Practica_Nueve"
         tools:targetApi="31">
+        <activity android:name="com.example.practica_nueve.SecondActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -21,9 +23,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".SecondActivity"
-            android:exported="true"/>
     </application>
 
 </manifest>
